<resources>
    <string name="app_name">PlaylistMaker</string>
    <string name="title">Playlist maker</string>
    <string name="main_search_button_text">Поиск</string>
    <string name="main_music">Медиатека</string>
    <string name="main_settings">Настройки</string>
    <string name="settings_settings_text_view">Настройки</string>
    <string name="settings_dark_theme">Темная тема</string>
    <string name="settings_user_case">Пользовательское соглашение</string>
    <string name="settings_call_support">Написать в поддержку</string>
    <string name="settings_share_app">Поделиться приложением</string>
    <string name="user_agreement">user agreement</string>
    <string name="yandex_practicum_android_dev_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="contact_email">olegkostin89@yandex.ru</string>
    <string name="support_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_text_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_yandex_practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_hint">Поиск</string>
    <string name="m_library_hint">Медиатека</string>
    <string name="search_nothing_find_text">Ничего не нашлось</string>
    <string name="library_playlist_find_text">Вы не создали\n ни одного плейлиста</string>
    <string name="library_nothing_find_text">Ваша медиатека пуста</string>
    <string name="search_no_internet_text">Проблемы со связью\n\n
        Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_text_refresh">Обновить</string>
    <string name="library_text_new_playlist">Новый плейлист</string>
    <string name="search_text_clear">Очистить историю</string>
    <string name="search_searched_textview">Вы искали</string>
    <string name="track_duration">Длительность</string>
    <string name="track_alb">Альбом</string>
    <string name="track_gen">Жанр</string>
    <string name="track_release">Год</string>
    <string name="track_contry">Страна</string>
    <string name="temp_track_duration">0:30</string>
    <string name="track_duration_zero_value">00:00</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_naming">Название*</string>
    <string name="playlist_desc">Описание</string>
    <string name="add_playlist">Создать</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="edit_info_bottom_sheet">Редактировать информацию</string>
    <string name="delete_info_bottom_sheet">Удалить плейлист</string>
    <string name="share_info_bottom_sheet">Поделиться</string>
    <string name="Yes">ДА</string>
    <string name="No">НЕТ</string>
    <string name="save">Сохранить</string>
    <string name="playlist_created">"плейлист %s создан"</string>
    <string name="edit">Редактировать</string>
    <string name="all_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="stop_creating_playlist">Завершить создание плейлиста?</string>
    <string name="cancel">Отмена</string>
    <string name="stop">Завершить</string>
    <string name="playlist_is_empty">Плейлист пуст</string>
    <string name="share">Поделиться</string>

</resources>