<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="24dp"
        app:navigationIcon="@drawable/arrow_back_btn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/settings_settings_text_view"
            android:textColor="@color/settings_settings_textview"
            android:textSize="@dimen/main_text_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/settings_margin_start_framelayouts"
        android:paddingTop="@dimen/settings_paddings_frameslayouts"
        android:paddingEnd="@dimen/settings_paddings_frameslayouts"
        android:paddingBottom="@dimen/settings_paddings_frameslayouts">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="@dimen/settings_tw_margin_end"
            android:text="@string/settings_dark_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_tw_text_size" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/settings_margin_start_framelayouts"
        android:paddingTop="@dimen/settings_paddings_frameslayouts"
        android:paddingEnd="@dimen/settings_paddings_frameslayouts"
        android:paddingBottom="@dimen/settings_paddings_frameslayouts">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="@dimen/settings_tw_margin_end"
            android:text="@string/settings_share_app"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_tw_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/settings_share_app"
            app:srcCompat="@drawable/share_icon" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/settings_margin_start_framelayouts"
        android:paddingTop="@dimen/settings_paddings_frameslayouts"
        android:paddingEnd="@dimen/settings_paddings_frameslayouts"
        android:paddingBottom="@dimen/settings_paddings_frameslayouts">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="@dimen/settings_tw_margin_end"
            android:text="@string/settings_call_support"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_tw_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/settings_call_support"
            app:srcCompat="@drawable/settings_support_item" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/settings_margin_start_framelayouts"
        android:paddingTop="@dimen/settings_paddings_frameslayouts"
        android:paddingEnd="@dimen/settings_paddings_frameslayouts"
        android:paddingBottom="@dimen/settings_paddings_frameslayouts">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="@dimen/settings_tw_margin_end"
            android:text="@string/settings_user_case"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_tw_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/user_agreement"
            app:srcCompat="@drawable/arrow_forward_btn" />
    </FrameLayout>

</LinearLayout>