<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/playlist_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/playlist_fragment_guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.1375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/new_playlist_btn"
        style="@style/SearchButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/library_text_new_playlist"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:textAllCaps="false" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlist_recyclerview"
        app:layout_constraintTop_toBottomOf="@id/new_playlist_btn"
        android:layout_marginTop="@dimen/margin_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone" />
    <ImageView
        android:id="@+id/playlist_fragment_image"
        android:layout_width="@dimen/search_image_param"
        android:layout_height="@dimen/search_image_param"
        android:backgroundTint="@color/rc_background"
        android:contentDescription="@string/search_nothing_find_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/playlist_fragment_guideline"
        app:srcCompat="@drawable/search_nothing_found" />

    <TextView
        android:id="@+id/playlist_nothing_found_text"
        style="@style/SearchLibraryActivityTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/library_playlist_find_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlist_fragment_image" />


</androidx.constraintlayout.widget.ConstraintLayout>
