<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rc_background"
    android:orientation="vertical"
    tools:context=".search.ui.SearchFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/search_toolbar"
        style="@style/SearchDayNightStyle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            style="@style/SearchDayNightStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_vertical"
            android:text="@string/search_hint"
            android:textSize="@dimen/main_text_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout style="@style/SearchActivityFrameLayoutPaddingStyle">

        <EditText
            android:id="@+id/search_search"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:autofillHints="@string/search_hint"
            android:background="@drawable/search_edit_text"
            android:drawableStart="@drawable/search_edittext_icon"
            android:drawablePadding="7dp"
            android:focusable="true"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:maxLength="50"
            android:paddingStart="13dp"
            android:paddingEnd="30dp"
            android:singleLine="true"
            android:textColor="@color/edittext_hint_color"
            android:textColorHint="@color/hint_edittext_hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/search_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingTop="12dp"
            android:paddingEnd="12dp"
            android:src="@drawable/clear_search"
            app:layout_constraintBaseline_toBaselineOf="@id/search_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="contentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_tracks_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recent_history_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/recent_history_top_textview"
            style="@style/SearchDayNightStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/search_searched_textview"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrain_for_recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/guideline_for_recycler"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recent_history_top_textview">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_history_tracks_recyclerview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_for_recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <Button
            android:id="@+id/clear_history"
            style="@style/SearchButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/search_text_clear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constrain_for_recycler"
            app:textAllCaps="false" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_nothing_found_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/search_nothing_found_guideline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.1375"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/search_nothing_found_image"
            android:layout_width="@dimen/search_image_param"
            android:layout_height="@dimen/search_image_param"
            android:backgroundTint="@color/rc_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/search_nothing_found_guideline"
            app:srcCompat="@drawable/search_nothing_found"
            android:contentDescription="@string/search_nothing_find_text" />

        <TextView
            android:id="@+id/playlist_nothing_found_text"
            style="@style/SearchLibraryActivityTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp"
            android:text="@string/search_nothing_find_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_nothing_found_image" />

        <Button
            android:id="@+id/search_nothing_found_btn"
            style="@style/SearchButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/search_text_refresh"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playlist_nothing_found_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/progress_bar_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:indeterminateTint="@color/progress_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/progress_bar_guideline"
            android:visibility="gone"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>